# coats

./: .eslintrc.js  .gitignore  .gitreview  .pre-commit-config.yaml  .travis.yml  .zuul.yaml  Makefile  README.md  bindep.txt  cspell.json  package-lock.json  package.json  setup.cfg  test-requirements.txt  tox.ini
coats/: FoxReplace.json  openstack_gerrit_zuul_status.user.js  searchEngines.json
doc/: requirements.txt
doc/source/: conf.py  index.rst
