[metadata]
name = coats
author = Sorin Sbarnea
author-email = sorin.sbarnea@gmail.com
maintainer = Sorin Sbarnea
maintainer-email = sorin.sbarnea@gmail.com
summary = Collection of scripts (coats) that improve open-stack developer browsing experience
description-file =
    README.md
home-page = https://github.com/openstack/coats
requires-python = >=2.7

license = BSD
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP
keywords = openstack, greasemonkey, foxreplace, web

[files]
packages =
    coats

[egg_info]
egg_base = .

[aliases]
test=pytest

[bdist_wheel]
universal = 1

[build_sphinx]
source-dir = docs
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html

[pbr]
warnerrors = true

[pycodestyle]
max-line-length=160
exclude = .eggs,.tox,build
